--- a/CIS-201-Projects/Src/CSS_HeshamAltourki_201821341.css
+++ b/CIS-201-Projects/Src/CSS_HeshamAltourki_201821341.css
@@ -1,7 +1,7 @@
 body {
   
   
-    background-image:url(light%20grey%20background.jpg);
+    background-color: aliceblue;
    background-repeat: no-repeat;
    background-size: cover;
    
