--- a/CIS-201-Projects/Src/ProjectStyle.css
+++ b/CIS-201-Projects/Src/ProjectStyle.css
@@ -12,6 +12,7 @@ body
 }
 .HeshamAltourki-img
 {
+    margin-top: 40px;
     float: right;
     width: 40%;
 }
@@ -62,8 +63,8 @@ body
 }
 .expertise img
 {
-    height: 5%;
-    margin: 5px;
+    height: 2%;
+    margin: 2px;
 }
 .expertise 
 {
@@ -82,14 +83,14 @@ body
 }
 .Project img
 {
-    width: 20%;
-    padding: 4px;
-    margin-bottom: 5px;
-    margin-left: 5px;
+    width: 10%;
+    padding: 2px;
+    margin-bottom: 2px;
+    margin-left: 2px;
 }
 .form-box
 {
-    margin-top: 30px;
+    margin-top: 70px;
 }
 .input-group input
 {
@@ -133,4 +134,32 @@ body
 {
     margin: 5% 0 5% 25%;
     width: 65%;
+}
+.nav-area
+{
+    float: inherit;
+    list-style: none;
+    margin-top: 20px;
+}
+.nav-area li
+{
+    display: inline-block;
+}
+.nav-area li a
+{
+    color: black;
+    text-decoration: none;
+    padding: 5px 20px;
+    font-family: sans-serif;
+    font-size: 14px;
+}
+.container
+{
+    padding: 0;
+    margin: 0;
+     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
