--- a/CIS-201-Projects/Src/ProjectStyle.css
+++ b/CIS-201-Projects/Src/ProjectStyle.css
@@ -163,3 +163,38 @@ body
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
+.calculator
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #091921;
+    position: relative;
+    display: grid;
+}
+.calculator .value
+{
+    grid-column: span 4;
+    height: 100px;
+    text-align: right;
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-size: 18px;
+}
+.calculator span
+{
+    display: grid;
+    width: 60px;
+    height: 60px;
+    color: #fff;
+    background: #0c2835;
+    place-items: center;
+    border: 1px solid rgba(0,0,0,.1);
+}
+.calculator span:active
+{
+    background: #74ff3b;
+    color: #111;
+}
